--- a/navbar.html
+++ b/navbar.html
@@ -184,10 +184,13 @@
             <li class="scroll-to-section">
               <a href="#newsletter">Newsletter</a>
             </li>
+            <li class="scroll-to-section">
+              <a href="cerita.php">CeritaSejarah</a>
+            </li>
             <li>
               <div class="gradient-button">
                 <a id="modal_trigger" href="#modal"
-                  ><i class="fa fa-sign-in-alt"></i> Sign In Now</a
+                  ><i class="fa-regular fa-lightbulb me-2"></i>QUIZ</a
                 >
               </div>
             </li>
